src/main/resources/k8s/tomcat/tomcat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deployment
  labels:
    app: tomcat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
        - name: tomcat
          image: registry.cn-hangzhou.aliyuncs.com/ghx-docker-repo/tomcat:latest
          ports:
            - containerPort: 8080
