src/main/resources/k8s/tomcat/tomcat-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat-ingress
spec:
  rules:
    - host: tomcat.ghx.com
      http:
        paths:
          - path: /
            backend:
              serviceName: tomcat-service
              servicePort: 80
